# pure-data

./: .appveyor.yml  .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .travis.yml  INSTALL.htm  INSTALL.md  INSTALL.txt  LICENSE.txt  Makefile.am  README.md  README.translators.md  README.txt  autogen.sh  configure.ac  deken-plugin.tcl  pd.pc.in
asio/: Makefile.am  README.txt
doc/: Makefile.am  fill.pre  fill.sh  namecanvas-help.pd
doc/1.manual/: 1.introduction.htm  1.introduction.txt  2.theory.of.operation.htm  3.installing.configuring.htm  4.externals.htm  5.current.status.htm  6.building.from.source.htm  index.htm  index.html  index.md  pdmanual.css  pdmanual.js  pdmanual.md  x1.htm  x2.htm  x3.htm  x4.htm  x5.htm  x6-a.htm  x6-b.htm  x6-c.htm  x6.htm  x7.htm
doc/2.control.examples/: 00.INTRO.txt  01.PART1.hello.pd  02.editing.pd  03.connections.pd  04.messages.pd  05.counter.pd  06.more.counters.pd  07.time.pd  08.depthfirst.pd  09.send_receive.pd  10.more.messages.pd  11.review.pd  12.PART2.subpatch.pd  13.locality.pd  14.dollarsigns.pd  15.array.pd  15.file.txt  16.more.arrays.pd  17.PART3.midi.pd  18.conditional.pd  19.random.pd  20.weighted-random.pd  21.markov.chain.pd  22.random-walk.pd  23.sequencing.pd  24.loops.pd  25.recursion.pd  dollarsign.pd  dollarsign2.pd  gop-abs.pd  sendnumber.pd
doc/3.audio.examples/: A00.intro.pd  A00.intro.txt  A01.sinewave.pd  A02.amplitude.pd  A03.line.pd  A04.line2.pd  A05.output.subpatch.pd  A06.frequency.pd  A07.fusion.pd  A08.beating.pd  A09.frequency.mod.pd  A10.review.pd  B01.wavetables.pd  B02.two-wavetables.pd  B03.tabread4.pd  B03.tabread4~.pd  B04.tabread4.interpolation.pd  B05.tabread.FM.pd  B06.table.switching.pd  B07.sampler.pd  B07.sampler.scratch.pd  B08.sampler.loop.pd  B09.sampler.loop.smooth.pd  B10.sampler.scratch.pd  B10.sampler.sliding.loop.pd  B11.sampler.nodoppler.pd  B12.sampler.transpose.pd  B13.sampler.overlap.pd  B14.sampler.rockafella.pd  B15.tabread4~-onset.pd  B16.long-varispeed.pd  C01.nyquist.pd  C02.sawtooth-foldover.pd  C03.zipper.noise.pd  C04.control.to.signal.pd  C05.sampler.oneshot.pd  C06.signal.to.control.pd  C07.envelope.follower.pd  C08.analog.sequencer.pd  C09.sample.hold.pd  (+102 more)
doc/4.data.structures/: 00.intro.txt  01.scalars.pd  02.getting.data.pd  03.setting.data.pd  04.append.pd  05.array.pd  05.symbol.text.pd  06.array.pd  06.file.pd  07.file.pd  07.graph.on.parent.pd  07.sequencer.pd  08.file.pd  08.selection.pd  08.sequencer.pd  09.scaling.pd  09.sequencer.pd  10.interaction.pd  10.onoff.pd  10.scaling.pd  11.array.controls.pd  11.onoff.pd  11.scaling.pd  12.beat-patterns.pd  12.onoff.pd  13.array.controls.pd  13.beat-patterns.pd  13.sliderule.pd  14.beat-patterns.pd  14.partialtracer.pd  14.sinedecomposer.pd  14.sliderule.pd  15.partialtracer.pd  15.sliderule.pd  16.FFT-plot.pd  16.partialtracer.pd  17.partialtracer.pd  18.scope2d.pd  add-trace.pd  beat-maker.pd  (+7 more)
doc/5.reference/: 0_all_guis-INTRO.txt  Pd-messages.pd  abs~-help.pd  acoustics-help.pd  acoustics-tilde-help.pd  acoustics~-help.pd  (+212 more)
extra/: Makefile.am  README.txt  complex-mod~-help.pd  complex-mod~.pd  expr-help.pd  filtercoeff-help.pd  filtercoeff.pd  hilbert~-help.pd  hilbert~.pd  makefile  makefile.subdir  output~-help.pd  output~.pd  rev1-final.pd  rev1-stage.pd  rev1~-help.pd  rev1~.pd  rev2~-help.pd  rev2~.pd  rev3~-help.pd  rev3~.pd
font/: Makefile.am  README.txt
linux/: Makefile.am  README.txt  clone-pd  cp-to-max.sh  detab-src.sh  get-tgz.sh  git-add-pd.sh  make-nodoc  make-release  make-tmp-copy  makefile.gnu  org.puredata.pd-gui.desktop  org.puredata.pd-gui.metainfo.xml  pd.xpm  puredata.desktop  release-checklist.txt  rpmspec  rpmspec-alsa  x-puredata.xml
mac/: Makefile.am  README.txt  build-autotools  build-i386  build-mac64  build-macosx  build-ppc  osx-app.sh  tcltk-wish.sh
msw/: Makefile.am  README.txt  build-msw-64.sh  build-msw.sh  build-nsi.sh  build-nt.bat  build-wxp-32.sh  build-wxp-64.sh  build32-nsi.sh  build64-nsi.sh  get-msw.sh  how-to-use-msvc.sh  libwinpthread-1.dll32  makesfx.bat  mingw-compile.sh  msw-app.sh  msw-install.sh  notes.txt  pd.lnk  pd.nsi  pd32.nsi  pd64.nsi  pdfontloader.dll-wish86-32bit  pdprototype.tgz  release.bat  send-msw.sh  send-nodoc.sh  tcltk-dir.sh  textconvert.c
po/: Makefile  Makefile.am  README.txt  _exclude.txt  af.po  ar.po  az.po  be.po  bg.po  de.po  el.po  en.po  en_ca.po  eo.po  es.po  eu.po  fi.po  fr.po  gu.po  he.po  hi.po  hu.po  hy.po  id.po  iemgui_dynamic_strings.tcl  it.po  ja.po  ko.po  nl.po  pa.po  pd_dynamic_strings.tcl  pl.po  pt_br.mo  pt_br.po  pt_pt.po  ru.po  sq.po  sv.po  ta.po  template.pot  (+6 more)
portaudio/: Makefile.am  Makefile.dist  Makefile.in  README.txt  configure.in  update.sh
portmidi/: CHANGELOG.txt  Makefile  Makefile.am  README.txt  license.txt  portmidi.dsp  portmidi.dsw  update.sh
src/: .dir-locals.el  CHANGELOG.txt  Makefile.am  config.h.in  configure  configure.in  d_arithmetic.c  d_array.c  d_ctl.c  d_dac.c  d_delay.c  d_fft.c  d_fft_fftsg.c  d_fft_fftw.c  d_fft_mayer.c  d_fftroutine.c  d_fftsg_h.c  d_filter.c  d_global.c  d_math.c  d_misc.c  d_osc.c  d_osc.h  d_resample.c  d_soundfile.c  d_soundfile.h  d_soundfile_aiff.c  d_soundfile_caf.c  d_soundfile_caff.c  d_soundfile_next.c  d_soundfile_raw.c  d_soundfile_wave.c  d_ugen.c  g_all_guis.c  g_all_guis.h  g_array.c  g_bang.c  g_canvas.c  g_canvas.h  g_checkchange.c  (+150 more)
tcl/: AppMain.tcl  Makefile  Makefile.am  README.communication.md  README.widgets.md  about.txt  apple_events.tcl  dialog_array.tcl  dialog_audio.tcl  dialog_bindings.tcl  dialog_canvas.tcl  dialog_data.tcl  dialog_find.tcl  dialog_font.tcl  dialog_gatom.tcl  dialog_goto.tcl  dialog_iemgui.tcl  dialog_iemgui_knb.tcl  dialog_iemgui_knob.tcl  dialog_kbdconnect.tcl  dialog_message.tcl  dialog_midi.tcl  dialog_path.tcl  dialog_preferences.tcl  dialog_startup.tcl  dialog_theme.tcl  entry_canvasmsg.tcl  helpbrowser.tcl  object_browser.tcl  opt_parser.tcl  pd-gui.in  pd-gui.tcl  pd-gui.tcl.orig  pd.tcl  pd_bindings.tcl  pd_canvas.tcl  pd_canvaszoom.tcl  pd_connect.tcl  pd_deken.tcl  pd_docsdir.tcl  (+30 more)
(+446 files in other folders)
